correction right aligned grids

--- a/imports/_grid.scss
+++ b/imports/_grid.scss
@@ -84,7 +84,7 @@ $class-type: if($grid-silent-classes, unquote("%"), unquote("."));
     }
 
     // variation: right aligned grid
-    #{$class-type}grid--center
+    #{$class-type}grid--right
     {
         text-align:right;
 
